@@ -79,14 +79,14 @@ class BookingServiceIT {
 
         var findByCaseResult = bookingService.findAllByCaseId(caseEntity1.getId(), null);
         assertEquals(1, findByCaseResult.toList().size(), "Should find 1 booking");
-        assertEquals(booking1.getId(), findByCaseResult.toList().get(0).getId(), "Should find booking 1");
+        assertEquals(booking1.getId(), findByCaseResult.toList().getFirst().getId(), "Should find booking 1");
         var findByCaseResult2 = bookingService.findAllByCaseId(caseEntity2.getId(), null);
         assertEquals(1, findByCaseResult2.toList().size(), "Should find 1 booking");
-        assertEquals(booking2.getId(), findByCaseResult2.toList().get(0).getId(), "Should find booking 2");
+        assertEquals(booking2.getId(), findByCaseResult2.toList().getFirst().getId(), "Should find booking 2");
 
-        var findByCaseReferenceResult = bookingService.searchBy("1234");
-        assertEquals(2, findByCaseReferenceResult.size(), "Should find 2 bookings");
-        assertEquals(booking1.getId(), findByCaseReferenceResult.get(0).getId(), "Should find booking 1");
-        assertEquals(booking2.getId(), findByCaseReferenceResult.get(1).getId(), "Should find booking 2");
+        var findByCaseReferenceResult = bookingService.searchBy(null, "1234", null);
+        assertEquals(2, findByCaseReferenceResult.getContent().size(), "Should find 2 bookings");
+        assertEquals(booking1.getId(), findByCaseReferenceResult.getContent().get(0).getId(), "Should find booking 1");
+        assertEquals(booking2.getId(), findByCaseReferenceResult.getContent().get(1).getId(), "Should find booking 2");
     }
 }
